<resources>
    <string name="app_name">Thanker</string>
    <string name="profile">Profile</string>
    <string name="stats">Stats</string>
    <string name="thank">Thank!</string>
    <string name="search">Search</string>
    <string name="premium">Premium</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="logout">Log Out</string>
    <string name="complete_registration">Please complete your registration!</string>
    <string name="name_editor">Name</string>
    <string name="date_of_birth">Birthday</string>
    <string name="country_living">Country</string>
    <string name="city_living">City</string>
    <string name="edit_information_label">Edit Information</string>
    <string name="save_information">Save</string>
    <string name="primary_category_text">Primary Category</string>
    <string name="secondary_category_text">Secondary Category</string>
    <string name="preferences">Preferences</string>
    <string name="complete_info">Complete Information</string>
    <string name="search_hint">Search for name or email!</string>
    <string name="at">\@</string>
    <string name="click_to_invite">Click, thank and invite!</string>
    <string name="send_to_email">Send invitation to:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="you_thanked">You\'ve thanked</string>
    <string name="come_back_tomorrow">Come back tomorrow and thank again!</string>
    <string name="thanks_given">Thanks Given:</string>
    <string name="thanks_received">Thanks Received:</string>
    <string name="thanks_given_two">Thanks Given:</string>
    <string name="invite_friends_label">Invite Friends!</string>
    <string name="invite_title_text">Invite your friends by thanking them!</string>
    <string name="invite_subtitle_text">Earn 50 Thankers when they register</string>
    <string name="search_for_friend_email">Search for friend\'s email</string>
    <string name="number_super_thanks">SuperThanks got:</string>
    <string name="number_mega_thanks">MegaThanks got:</string>
    <string name="number_power_thanks">PowerThanks got:</string>
    <string name="save">Save</string>
    <string name="reason">Insert reason for thanks</string>
    <string name="give_reason">Please give a reason for thanking! :)</string>
    <string name="thanks_for_giving_reason">Thank you for giving a reason!</string>
    <string name="thanks_for_thanking">Thank you for thanking today!</string>
    <string name="super_thanks_given">Super Thanks given:</string>
    <string name="mega_thanks_given">Mega Thanks given:</string>
    <string name="power_thanks_given">Power Thanks given:</string>
    <string name="super_thanks_received">Super Thanks received:</string>
    <string name="mega_thanks_received">Mega Thanks received:</string>
    <string name="power_thanks_received">Power Thanks received:</string>
    <string name="see_full_thanks">List of Thanks!</string>
    <string name="five_thanks_given">Five most recent thanks given:</string>
    <string name="five_thanks_received">Five most recent thanks received:</string>
    <string name="main_thanks_of">Main Thanks of:</string>
    <string name="main_thanks_categories">has mostly thanked:</string>
    <string name="combined_users_thanks">Combined users\' thanks</string>
    <string name="user_must_thank">User is yet to thank!</string>
    <string name="no_common_thanks_yet">You have no common thanks yet</string>
    <string name="no_data_yet">No data yet</string>
    <string name="check">Check</string>
    <string name="hints">Hints</string>
    <string name="friends_list">Top Friends</string>
    <string name="rank">Rank</string>
    <string name="username">Username</string>
    <string name="thanks">Thanks</string>
    <string name="top_10_thankers">Top 10 Thankers of This Page</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">We\'d like to request your location, in order to make sure we collect the correct places from the Thanks generated! :)</string>
    <string name="ok">Ok</string>
    <string name="rank_given">Top 10 of Profiles Thanked</string>
    <string name="top_10_given_thankers">Top 10 of Thanks Given to Other Profiles</string>
    <string name="friends">Friends</string>
    <string name="given">You gave</string>
    <string name="received">Gave you</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="friend">Friend</string>
    <string name="super_friend">Super Friend</string>
    <string name="mega_friend">Mega Friend</string>
    <string name="power_friend">Power Friend</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="friends_feed">Feed</string>
    <string name="friends_requests">REQUESTS</string>
    <string name="request_sent">Request sent</string>
    <string name="friend_requests_received">Friend Requests Received:</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="add_friend">Add Friend</string>
    <string name="combined_thanks_of_you_and">Thanks Compatibility of you and %s</string>
    <string name="friends_plural">Friends:</string>
    <string name="thanks_given_by">Thanks Given By</string>
    <string name="thanks_given_to">Thanks Given To</string>
    <string name="messages">Messages</string>
    <string name="so_we_send_invite">so we send the invite!</string>
    <string name="already_invited">You\'ve already invited:</string>
    <string name="thanks_currency">Thankers</string>
    <string name="you_will_earn">You will earn 10 Thankers when your friend registers!</string>
    <string name="reason_saved">Reason saved!</string>
    <string name="you_can_add_reason">You may add a reason for your Thanks!</string>
    <string name="has_joined_so">has joined so you earn 10 Thankers!</string>
    <string name="new_friend_joined">New friend joined!</string>
    <string name="you_earn_10_thankers">You earned 10 Thankers!</string>
    <string name="prize_10_thankers_text">Because you\'ve thanked people more than10 times (or multiples of 10 times), we have awarded you 10 Thankers.\nUse these Thankers to give more special Thanks to your friends and favourite profiles!\n\nGladly,\nYour Thanker team!</string>
    <string name="you_earn_100_thankers">You have earned 100 Thankers!</string>
    <string name="prize_100_thankers_text">As you\'ve thanked 100 times (or in a multiple number of 100), we\'ve awarded you 100 Thankers.\nThis is worth, for example, a Mega Thanks!\nUse these special Thanks to specially thank your friends and favourite pages!\n\nSpecially thankful to you, as well,\nYour Thanker team!</string>
    <string name="you_earn_1000_thankers">You\'ve earned 1000 Thankers!</string>
    <string name="prize_1000_thankers_text">To thank is to make every moment more special. It is to appreciate it, more fully.\nAnd because you\'ve thanked 1000 times or more (in a multiple of 1000), we\'ve also awarded you 1000 Thankers!\nYou can Power Thank, give more Mega Thanks, or just as you like to Thank!\nUse Special Thanks to apply more meaning in what you\'re thanking for.\nGo thank your friends and favourites profiles!\n\nHere thanking you,\nYour Thanker team!</string>
    <string name="thanker_messages">Thanker Messages</string>
    <string name="user">User</string>
    <string name="sent_you_super_thanks">sent you a &lt;font color=\'#28a9e0\'&gt;Super Thanks!&lt;/font&gt;</string>
    <string name="body_message_super_thanks">A &lt;font color=\'#28a9e0\'&gt;Super Thanks&lt;/font&gt; is worth &lt;font color=\'#FFC107\'&gt;10&lt;/font&gt; Thanks.\nYou must be, or must have done something special here.\nGlad to see you\'re being appreciated!\n\nAppreciating you,\nYour Thanker team!</string>
    <string name="sent_you_mega_thanks">sent you a &lt;font color=\'#1d7ba3\'&gt;Mega Thanks&lt;/font&gt;!</string>
    <string name="body_message_mega_thanks">A &lt;font color=\'#1d7ba3\'&gt;Mega Thanks&lt;/font&gt; is worth &lt;font color=\'#1976D2\'&gt;100&lt;/font&gt; Thanks.\nIt\'s a sign of really high appreciation. You\'re spreading your magic, we see. It is highly advised that keep on just doing that!\n\nYours truly,\nYour Thanker team!</string>
    <string name="sent_you_power_thanks">sent you a &lt;font color=\'#165e7d\'&gt;Power Thanks&lt;/font&gt;!</string>
    <string name="body_message_power_thanks">&lt;font color=\'#165e7d\'&gt;Power Thanks&lt;/font&gt;gt; are as &lt;font color=\'#673AB7\'&gt;power&lt;/font&gt;ful as it gets! Being worth &lt;font color=\'#673AB7\'&gt;1000&lt;/font&gt; Thanks, it means someone just spent some valuable Thankers amount to show how much you\'re appreciated! You must be doing something really well! Don\'t be surprised if we come to you someday, asking for some advice.\nPlease keep being powerfully that way, and embrace that same Power you\'re receiving!\nLet it be some boost for your own Thanking activity, as well ;)n\nOur best to you, and our best to your actions,\nYour Thanker team!</string>
    <string name="fame">Hall Of Fame</string>
    <string name="search_hint_friends">Search for your friends...</string>
    <string name="contact_us">Contact us</string>
    <string name="subject">Subject</string>
    <string name="write_to_us">Write to us</string>
    <string name="send">Send</string>
    <string name="invite_by_email">By Email</string>
    <string name="start_giving_thanks">Start thanking so you see your thanking list here! What do you feel grateful for, today? ;)</string>
    <string name="start_receiving_thanks">As soon as you receive thanks, you\'ll see the list here! What would make people thank you more? :)</string>
    <string name="start_adding_friends">Add some friends, or accept requests! Friends make it to the top of what Thanker feels mostly grateful for! ;)</string>
    <string name="other_options">Other Options</string>
    <string name="delete_account">Delete account</string>
    <string name="last_chance">Last chance</string>
    <string name="really_want_delete_question">Do you really want to delete your Thanker Account?</string>
    <string name="no_i_dont">No, I don\'t</string>
    <string name="yes_delete">Yes, delete</string>
    <string name="your_opportunity">You have the opportunity Now!</string>
    <string name="to_get_your_account_back">To get your account back ;)\nDo you want it back?</string>
    <string name="oh_yes">Oh, yes I do, baby!</string>
    <string name="no_thanks">No, thanks</string>
    <string name="thank_you_coming_back">Thank you for coming back!</string>
    <string name="revive_options">If you choose \"Yes\", you\'ll pick up your account from where it was.\nOr if you choose \"No\", you\'ll start a new account.\nChoose wisely, and also thankfully ;)</string>
    <string name="start_giving_thanks_other">Something tell us that user %s is about to become a hardcore Thanker. Stay tuned for this list of Thanks ;)</string>
    <string name="tell_us_everything">Tell us everything!</string>
    <string name="contact_us_text">How are you experiencing Thanking?\nAlso, we\'d like to know your suggestions and feedback.\nThank you for this, and see you soon!</string>
    <string name="sent_and_thank">Sent. Thank you!</string>
    <string name="my_premium">My Premium</string>
    <string name="earn_thankers">Earn Extra Thankers!</string>
    <string name="activate_location">Activate Location</string>
    <string name="check_policy">Privacy Policy</string>
    <string name="show_thanks_description">Show Thanks Description</string>
    <string name="no_friends_found">No results found with your search: %s</string>
    <string name="friends_ranking">Friends Ranking</string>
    <string name="invite_by_contacts">By Phone Contacts</string>
</resources>