<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactActivity"
    android:scrollbarStyle="outsideOverlay">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/letter"
            android:layout_gravity="center" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="24sp"/> -->

        <EditText
            android:id="@+id/input_text_subject"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/subject"
            android:inputType="textCapWords"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_to_us"
            android:textSize="24sp"
            android:layout_marginTop="24dp"/> -->

        <EditText
            android:id="@+id/input_text_body"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType=""
            android:hint="@string/write_to_us"/>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:text="@string/send"
            android:background="@drawable/button_rounded_green"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/text_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tell_us_everything"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />

        <TextView
            android:id="@+id/text_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/contact_us_text"
            android:textAlignment="center"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_sent"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:src="@drawable/sent"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/text_sent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sent_and_thank"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>