<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"    >

    <ListView
        android:id="@+id/list_thanks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@android:color/transparent"
        android:dividerHeight="12.0sp"
        android:scrollbarStyle="outsideOverlay"
        />

    <TextView
        android:id="@+id/empty_view_giver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/start_giving_thanks" />

    <TextView
        android:id="@+id/empty_view_giver_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:visibility="gone"
        android:text="@string/start_giving_thanks_other" />

    <TextView
        android:id="@+id/empty_view_receiver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textAlignment="center"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/start_receiving_thanks" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true" />

</RelativeLayout>