<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="56dp"
    tools:context=".fragments.friends_fragments.FriendsListFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_friends"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:defaultFocusHighlightEnabled="true"
        android:iconifiedByDefault="false"
        android:paddingBottom="4dp"
        android:queryHint="@string/search_hint_friends"
        android:visibility="gone" />

    <!--<androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"> -->

    <LinearLayout
        android:id="@+id/linear_ranking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@drawable/bottomshapebottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_ranking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/friends_ranking"
            android:textColor="@color/colorPrimaryDark"
            android:textAlignment="center"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image_info_ranking"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/info" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_friends"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_ranking"
        android:divider="@android:color/transparent"
        android:dividerHeight="20.0sp"
        android:scrollbarStyle="outsideOverlay" />

    <!-- </androidx.cardview.widget.CardView> -->


    <LinearLayout
        android:id="@+id/empty_view_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_friends"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/start_adding_friends"
            android:textAlignment="center" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/searchthank" />

    </LinearLayout>


    <TextView
        android:id="@+id/empty_view_friends_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_friends"
        android:layout_margin="32dp"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/no_friends_found"
        android:textAlignment="center"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerInParent="true" />

    <!--

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_friends_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:paddingBottom="40dp"/>

        -->

</RelativeLayout>